tests/fail/import_leak_b.stderr
error[E0402]: Use of undeclared identifier 'leaked_func'
 --> tests/fail/import_leak_b.tk:6:5
  |
 6 |     leaked_func()
  |     ^
